@@ -6,10 +6,16 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import javax.persistence.EntityManager;
 import javax.transaction.Transactional;
 
 import org.springframework.beans.BeanUtils;
+import org.springframework.beans.BeansException;
+import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.context.ApplicationContext;
+import org.springframework.data.jpa.repository.support.JpaRepositoryFactoryBean;
+import org.springframework.data.querydsl.EntityPathResolver;
+import org.springframework.data.querydsl.SimpleEntityPathResolver;
 import org.springframework.stereotype.Service;
 
 import com.swayam.ocr.porua.tesseract.model.CorrectedWord;
@@ -37,31 +43,26 @@ public class OcrWordServiceImpl implements OcrWordService {
 
     @Override
     public int getWordCount(long bookId, long pageImageId) {
-	return getOcrWordRepositoryTemplate(bookId).countByOcrWordIdBookIdAndOcrWordIdPageImageId(bookId,
-		pageImageId);
+	return getOcrWordRepositoryTemplate(bookId).countByOcrWordIdBookIdAndOcrWordIdPageImageId(bookId, pageImageId);
     }
 
     @Override
     public Collection<OcrWordOutputDto> getWords(long bookId, long pageImageId, UserDetails userDetails) {
-	Collection<OcrWord> entities = getOcrWordRepositoryTemplate(bookId)
-		.findByOcrWordIdBookIdAndOcrWordIdPageImageIdOrderByOcrWordIdWordSequenceId(bookId,
-			pageImageId);
+	Collection<OcrWord> entities = getOcrWordRepositoryTemplate(bookId).findByOcrWordIdBookIdAndOcrWordIdPageImageIdOrderByOcrWordIdWordSequenceId(bookId, pageImageId);
 	return entities.stream().map(entity -> {
 	    OcrWordOutputDto dto = new OcrWordOutputDto();
 	    BeanUtils.copyProperties(entity, dto);
 	    List<? extends CorrectedWord> correctedWords = entity.getCorrectedWords();
 	    if (correctedWords.size() > 0) {
 
-		boolean isIgnored = correctedWords.stream()
-			.filter(correctedWord -> (correctedWord.getUser().getRole() == UserRole.ADMIN_ROLE)
-				|| (correctedWord.getUser().getId() == userDetails.getId()))
-			.anyMatch(CorrectedWord::isIgnored);
+		boolean isIgnored =
+			correctedWords.stream().filter(correctedWord -> (correctedWord.getUser().getRole() == UserRole.ADMIN_ROLE) || (correctedWord.getUser().getId() == userDetails.getId()))
+				.anyMatch(CorrectedWord::isIgnored);
 
 		if (isIgnored) {
 		    dto.setIgnored(true);
 		} else {
-		    Optional<? extends CorrectedWord> correctedWordWithText = correctedWords.stream()
-			    .filter(correctedWord -> correctedWord.getCorrectedText() != null).findFirst();
+		    Optional<? extends CorrectedWord> correctedWordWithText = correctedWords.stream().filter(correctedWord -> correctedWord.getCorrectedText() != null).findFirst();
 		    if (correctedWordWithText.isPresent()) {
 			dto.setCorrectedText(correctedWordWithText.get().getCorrectedText());
 		    }
@@ -82,10 +83,8 @@ public class OcrWordServiceImpl implements OcrWordService {
     public int markWordAsIgnored(OcrWordId ocrWordId, UserDetails user) {
 	OcrWord ocrWord = getWord(ocrWordId);
 
-	CorrectedWordRepositoryTemplate correctedWordRepositoryTemplate =
-		getCorrectedWordRepositoryTemplate(ocrWordId.getBookId());
-	Optional<CorrectedWord> existingCorrection =
-		correctedWordRepositoryTemplate.findByOcrWordIdAndUser(ocrWord.getId(), user);
+	CorrectedWordRepositoryTemplate correctedWordRepositoryTemplate = getCorrectedWordRepositoryTemplate(ocrWordId.getBookId());
+	Optional<CorrectedWord> existingCorrection = correctedWordRepositoryTemplate.findByOcrWordIdAndUser(ocrWord.getId(), user);
 
 	if (existingCorrection.isPresent()) {
 	    return correctedWordRepositoryTemplate.markAsIgnored(ocrWord.getId(), user);
@@ -107,10 +106,8 @@ public class OcrWordServiceImpl implements OcrWordService {
 
 	OcrWord ocrWord = getWord(ocrWordId);
 
-	CorrectedWordRepositoryTemplate correctedWordRepositoryTemplate =
-		getCorrectedWordRepositoryTemplate(ocrWordId.getBookId());
-	Optional<CorrectedWord> existingCorrection =
-		correctedWordRepositoryTemplate.findByOcrWordIdAndUser(ocrWord.getId(), user);
+	CorrectedWordRepositoryTemplate correctedWordRepositoryTemplate = getCorrectedWordRepositoryTemplate(ocrWordId.getBookId());
+	Optional<CorrectedWord> existingCorrection = correctedWordRepositoryTemplate.findByOcrWordIdAndUser(ocrWord.getId(), user);
 
 	if (existingCorrection.isPresent()) {
 	    return correctedWordRepositoryTemplate.updateCorrectedText(ocrWord.getId(), correctedText, user);
@@ -123,14 +120,55 @@ public class OcrWordServiceImpl implements OcrWordService {
 
     private OcrWordRepositoryTemplate getOcrWordRepositoryTemplate(long bookId) {
 	EntityClassDetails entityClassDetails = getEntityClassDetails(bookId);
-	return applicationContext.getBean(entityClassDetails.getOcrWordEntityRepository(),
-		OcrWordRepositoryTemplate.class);
+
+	JpaRepositoryFactoryBean bean = getJpaFactoryBean(entityClassDetails.getOcrWordEntityRepository());
+
+	return (OcrWordRepositoryTemplate) bean.getObject();
     }
 
     private CorrectedWordRepositoryTemplate getCorrectedWordRepositoryTemplate(long bookId) {
 	EntityClassDetails entityClassDetails = getEntityClassDetails(bookId);
-	return applicationContext.getBean(entityClassDetails.getCorrectedWordEntityRepository(),
-		CorrectedWordRepositoryTemplate.class);
+
+	JpaRepositoryFactoryBean bean = getJpaFactoryBean(entityClassDetails.getCorrectedWordEntityRepository());
+
+	return (CorrectedWordRepositoryTemplate) bean.getObject();
+    }
+
+    private JpaRepositoryFactoryBean getJpaFactoryBean(String className) {
+	JpaRepositoryFactoryBean bean;
+	try {
+	    bean = new JpaRepositoryFactoryBean(Class.forName(className));
+	    EntityManager em = applicationContext.getBean(EntityManager.class);
+	    // EntityMananger should be injected
+	    bean.setEntityManager(em);
+	    ObjectProvider<EntityPathResolver> op = new ObjectProvider<EntityPathResolver>() {
+
+		@Override
+		public EntityPathResolver getObject() throws BeansException {
+		    return SimpleEntityPathResolver.INSTANCE;
+		}
+
+		@Override
+		public EntityPathResolver getObject(Object... args) throws BeansException {
+		    return getObject();
+		}
+
+		@Override
+		public EntityPathResolver getIfAvailable() throws BeansException {
+		    return getObject();
+		}
+
+		@Override
+		public EntityPathResolver getIfUnique() throws BeansException {
+		    return getObject();
+		}
+	    };
+	    bean.setEntityPathResolver(op);
+	    bean.afterPropertiesSet();
+	} catch (ClassNotFoundException e) {
+	    throw new RuntimeException(e);
+	}
+	return bean;
     }
 
     private EntityClassDetails getEntityClassDetails(long bookId) {
@@ -142,11 +180,8 @@ public class OcrWordServiceImpl implements OcrWordService {
 	EntityClassDetails entityClassDetails = getEntityClassDetails(ocrWord.getOcrWordId().getBookId());
 	OcrWord entity;
 	try {
-	    entity = (OcrWord) Class.forName(entityClassDetails.getOcrWordEntity()).getDeclaredConstructor()
-		    .newInstance();
-	} catch (InstantiationException | IllegalAccessException | ClassNotFoundException
-		| IllegalArgumentException | InvocationTargetException | NoSuchMethodException
-		| SecurityException e) {
+	    entity = (OcrWord) Class.forName(entityClassDetails.getOcrWordEntity()).getDeclaredConstructor().newInstance();
+	} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 	    throw new RuntimeException(e);
 	}
 	BeanUtils.copyProperties(ocrWord, entity);
@@ -166,11 +201,8 @@ public class OcrWordServiceImpl implements OcrWordService {
 	correctedWord.setUser(user);
 	CorrectedWord entity;
 	try {
-	    entity = (CorrectedWord) Class.forName(entityClassDetails.getCorrectedWordEntity())
-		    .getDeclaredConstructor().newInstance();
-	} catch (InstantiationException | IllegalAccessException | ClassNotFoundException
-		| IllegalArgumentException | InvocationTargetException | NoSuchMethodException
-		| SecurityException e) {
+	    entity = (CorrectedWord) Class.forName(entityClassDetails.getCorrectedWordEntity()).getDeclaredConstructor().newInstance();
+	} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 	    throw new RuntimeException(e);
 	}
 	BeanUtils.copyProperties(correctedWord, entity);
